--- a/test-output/old/Default suite/classes.html
+++ b/test-output/old/Default suite/classes.html
@@ -4,15 +4,11 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>Academy.ValidateObjects</td>
+<td>Academy.ValidateMainNavigationBar</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>validateTitle</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>validateMainNavigation</td>
